syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService.Protos";
package GrpcService.Protos;

// The Weather service definition
service WeatherForecasts {
    rpc GetWeatherStream(google.protobuf.Empty) returns (stream WeatherData);
}
  

message WeatherData {
    google.protobuf.Timestamp dateTime = 1;
    int32 temperatureC = 2;
    int32 temperatureF = 3;
    string summary = 4;
}